<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_tab_home_selector"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_tab_calendar_selector"
        android:title="@string/nav_calendar" />
    <item
        android:id="@+id/nav_resources"
        android:icon="@drawable/ic_tab_resources_selector"
        android:title="@string/nav_resources" />
    <item
        android:id="@+id/nav_social"
        android:icon="@drawable/ic_tab_social_selector"
        android:title="@string/nav_social" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_tab_profile_selector"
        android:title="@string/nav_profile" />
</menu>
